#--------------------------------------------------------------------------
# File and Version Information:
#  $Id$
#
# Description:
#  ChangeLog file for package psana-tools
#------------------------------------------------------------------------

Package author: David A. Schneider

Please describe any modifications that you made to the package in the
reverse time order.

Tag: V00-08-33
2015-8-27 David Schneider
- add data mover script to test live small data. JIRA-85

Tag: V00-08-32
2015-8-14 David Schneider
- disable live mode sim unit test since it failed once on a nightly in  
  rel7 JIRA PSAS-177

Tag: V00-08-31
2015-8-10 David Schneider
- put all output during unit testing in subdirectory based in SIT_ARCH

Tag: V00-08-30
2015-7-7 David Schneider
- add function to get calib data dir for testing
- update to pdsdata 8.3.1 with Epix::Config100aV2, JIRA PSAS-166

Tag: V00-08-29
2015-6-18 David Schneider
- add function cmdTimeOutWithReturnCode() to psanaTestLib

Tag: V00-08-28
2015-5-1 David Schneider
- update to pdsdata 8.2.7 with BldDataAnalogInputV1, JIRA PSAS-144

Tag: V00-08-27
2015-4-28 David Schneider
- further modified xtc iterator to warn for large xtc extents, JIRA issue PSAS-141	

Tag: V00-08-26
2015-4-28 David Schneider
- modify xtc iterator to print message for unusual events, JIRA issue PSAS-141	

Tag: V00-08-25
2015-4-28 David Schneider
- copy pdsdata xtc iterator into psana_test so that it can be modified

Tag: V00-08-24
2015-4-9 David Schneider
- add diagnostic command pyPsanaMonit and C++ module PsanaModuleGetObjects
	
Tag: V00-08-23
2015-3-16 David Schneider
- update psanaTestLib function copyToMultiTestDir to also create index files

Tag: V00-08-22
2015-3-3 David Schneider
- small data JIRA issue PSAS-85
- add option dump_sml to psana_test.dump which is false by default (means do not
  dump small data types). This means be default we can compare dump of .smd.xtc and .xtc
  and expect same thing, but put on option to see those types.